# checkerboard-pattern

./: .gitignore  CMakeLists.txt  README.md  main.cpp
